# home-network-debugging

./: .gitignore  Cargo.toml  LICENSE  README.md
.gemini/: settings.json
crates/nest-wifi-pro-ethernet/: Cargo.toml  README.md
crates/nest-wifi-pro-ethernet/src/: lib.rs  main.rs
crates/netgear-cm3000-config/: Cargo.toml  README.md
crates/netgear-cm3000-config/src/: lib.rs  main.rs
crates/trendnet-teg3102ws-config/: Cargo.toml  README.md
crates/trendnet-teg3102ws-config/src/: lib.rs  main.rs  tests_more.rs
docs/: modem-analysis.md  modem-basics.md  nest-wifi-analysis.md  switch-analysis.md  switch-basics.md
prompt/: approach.md  direct-setup.md  goal.md  lab-setup.md  live-setup.md
