[package]
name = "nest-wifi-pro-ethernet"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
pcap = "1.1"
etherparse = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
oui = "0.8.1"
oui-data = "0.2.1"

[[bin]]
name = "nest-check"
path = "src/main.rs"
