[package]
name = "netgear-cm3000-config"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
url = "2.5"
tokio = { version = "1", features = ["full"] }
oui = "0.8.1"
oui-data = "0.2.1"

[dev-dependencies]
mockito = "1.4"
