[package]
name = "trendnet-teg3102ws-config"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
oui = "0.8.1"
oui-data = "0.2.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.4"

[dev-dependencies]
wiremock = "0.5"
serde_json = "1.0"
